<resources>
    <string name="app_name">dreamtales</string>
    <string name="btn_login">Sign in</string>
    <string name="btn_signup">Create new account</string>
    <string name="header_splash">Greatest library for sweet dreams</string>
    <string name="content_splash">There are over 1000 audio fairy stories from around from the world from our app </string>
    <string name="question_account">Dont you have an account yet?</string>
    <string name="create_account"><u>Create new account now</u></string>
    <string name="login_facebook">Sign in with Facebook</string>
    <string name="login_google">Sign in with Google</string>
    <string name="loading">Loading</string>
    <string name="check_phone">check_phone</string>
    <string name="enter_username">ENTER YOUR NAME</string>
    <string name="device_manager">Manage Devices</string>
    <string name="device_logged">All devices are logged</string>
    <string name="select_all">Select all</string>
    <string name="logout">Logout</string>
    <string name="notify">Notification</string>
    <string name="search">Search...</string>
    <string name="forme">For me</string>
    <string name="lib">Library</string>
    <string name="forgot_pass"><u>Ooh. I have forgot password</u></string>
    <string name="sign_facebook">Sign up with Facebook</string>
    <string name="sign_google">Sign up with google</string>
    <string name="question_already_account">Do you have an account ?</string>
    <string name="txt_login"><u>Login here</u></string>
    <string name="signup">Sign up</string>
    <string name="test">
        Cho đến đầu thế kỷ 20, Jabotinsky không mấy quan tâm tới các vấn đề của người Do Thái ở châu Âu, cũng không tìm hiểu sâu về truyền thống và tôn giáo Do Thái. Mẹ ông dạy con mình tiếng nói và cố gắng kỷ niệm các ngày lễ của dân Do Thái, nhưng bản thân Jabontinsky lại bị văn học Nga và Ý cuốn hút. Chỉ đến khi xảy ra pogrom người Do Thái trong Đế quốc Nga thập niên 1880, đặc biệt là những năm 1904–1905, Jabotinsky mới bắt đầu quan tâm đến chủ nghĩa phục quốc và chủ nghĩa dân tộc Do Thái. Năm 1903, ông có tư cách đại biểu Đại hội VI Chủ nghĩa phục quốc Do Thái. Ở đó, như sau này ông viết lại rằng đã rất ấn tượng với Theodor Herzl, tác giả cuốn Der Judenstaat (Nhà nước Do Thái). Từ đó, Jabotinsky tham gia vào các hoạt động của phong trào phục quốc Do Thái. Ông phản đối ý tưởng thành lập một nhà nước Do Thái ở Uganda. Ông cho rằng sự hồi sinh của dân Do Thái chỉ có thể diễn ra ở Palestine, và chỉ ở đó họ mới có thể thiết lập nhà nước độc lập của mình.[7] Trong Chiến tranh thế giới thứ nhất, Jabotinsky chiến đấu trong Quân đoàn Do Thái cùng với Joseph Trumpeldor. Sau đó, ông phát triển quan điểm rằng người Do Thái xứng đáng có lực lượng vũ trang riêng. Theo ông, khả năng tự vệ, chủ nghĩa quân phiệt và huấn luyện quân sự là những yếu tố không thể thiếu trong việc hình thành "dân Do Thái mới". Các cuộc bạo động bài Do Thái ngày càng tăng ở châu Âu dẫn ông đến ý tưởng thành lập các tổ chức tự vệ Do Thái. Ông nói thêm rằng không có lực lượng vũ trang Do Thái nào làm xấu đi mối quan hệ Ả Rập-Do Thái ở khu định cư Do Thái ở Palestine Yishuv mà chỉ góp phần bảo vệ các nông trang tập thể kibbutz và hợp tác xã moshav. Ông tin rằng các lực lượng vũ trang là một nhu cầu lịch sử của dân Do Thái.[8][9] Năm 1936, Josef Schechtman và những người theo chủ nghĩa xét lại khác tin rằng nhờ Quân đoàn Do Thái mà người Anh đã chiếm được Pa
    </string>
    <string name="buy_package">Buy package</string>
</resources>