<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="15dp"
    android:background="@drawable/bg_popup_dialog"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_manager"
            android:textColor="@color/white"
            android:fontFamily="@font/manofik_bold"
            android:paddingHorizontal="50dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
        <ImageView
            android:id="@+id/img_close_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_close_24"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_logged"
            android:textColor="@color/white"
            android:fontFamily="@font/gt_walshiem"
            android:textSize="15dp"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:id="@+id/txt_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/gt_walshiem"
            android:text="@string/select_all"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcy_device_logged"
        android:layout_width="match_parent"
        android:layout_height="230dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="20dp">
        <Button
            android:id="@+id/btn_logout_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:fontFamily="@font/gt_walshiem"
            android:backgroundTint="@color/yellow"/>
    </LinearLayout>
</LinearLayout>