<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <me.relex.circleindicator.CircleIndicator3
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        app:ci_drawable="@drawable/circle_indicator"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layout_account"/>
    <LinearLayout
        android:id="@+id/layout_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingTop="20dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="@color/yellow"
            android:elevation="10dp"
            android:fontFamily="@font/gt_walshiem"
            android:shadowColor="@color/black"
            android:text="@string/btn_login"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="@color/light_blue"
            android:elevation="10dp"
            android:fontFamily="@font/gt_walshiem"
            android:shadowColor="@color/black"
            android:text="@string/btn_signup"
            android:textSize="15sp" />
        <LinearLayout
            android:id="@+id/layout_txt"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:id="@+id/txt_question_acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_account"
                android:textColor="@color/white"
                android:fontFamily="@font/gt_walshiem"
                android:layout_marginTop="5dp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/txt_create_acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:fontFamily="@font/gt_walshiem"
                android:textColor="@color/light_blue"
                android:layout_marginTop="5dp"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>