<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_blue">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/header_login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_header"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:src="@drawable/img_key"
                android:rotation="-45"
                android:visibility="visible"
                />

            <TextView
                android:id="@+id/txt_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manofik_bold"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="35sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/container_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:visibility="visible"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/header_login"
        app:layout_constraintStart_toStartOf="parent">
        <Button
            android:id="@+id/btn_login_fb"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="@color/light_blue"
            android:elevation="10dp"
            android:fontFamily="@font/gt_walshiem"
            android:shadowColor="@color/black"
            android:text="@string/login_facebook"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_login_gg"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="@color/light_blue"
            android:elevation="10dp"
            android:fontFamily="@font/gt_walshiem"
            android:shadowColor="@color/black"
            android:text="@string/login_google"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/container_edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/gt_walshiem"
                android:text="Phone"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="phone"
                android:background="@drawable/bg_edittext"
                android:paddingLeft="20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_edt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/gt_walshiem"
                android:text="Passowrd"
                android:textColor="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/edt_pass"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="textPassword"
                    android:background="@drawable/bg_edittext"
                    android:paddingLeft="20dp" />
                <ImageView
                    android:id="@+id/img_show_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_show_pass"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    android:layout_marginRight="20dp"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/txt_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:background="@drawable/ripple_txt"
        android:clickable="true"
        android:fontFamily="@font/gt_walshiem"
        android:text="@string/forgot_pass"
        android:textColor="@color/blue_white"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_btn" />

    <LinearLayout
        android:id="@+id/layout_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingTop="20dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="@color/yellow"
            android:elevation="10dp"
            android:fontFamily="@font/gt_walshiem"
            android:shadowColor="@color/black"
            android:text="@string/btn_login"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="@color/light_blue"
            android:elevation="10dp"
            android:fontFamily="@font/gt_walshiem"
            android:shadowColor="@color/black"
            android:text="@string/btn_signup"
            android:textSize="15sp"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/layout_txt"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="vertical"
            android:visibility="visible">
            <TextView
                android:id="@+id/txt_question_acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_account"
                android:textColor="@color/white"
                android:fontFamily="@font/gt_walshiem"
                android:layout_marginTop="5dp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/txt_create_acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:fontFamily="@font/gt_walshiem"
                android:textColor="@color/blue_white"
                android:layout_marginTop="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>