<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/layout_container"
    android:background="@color/dark_blue">
    <RelativeLayout
        android:id="@+id/screen_onboarding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:src="@drawable/img_bookshelf" />
        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manofik_bold"
            android:gravity="center"
            android:text="@string/app_name"
            android:layout_below="@+id/iv_logo"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <ProgressBar
            android:id="@+id/common_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@id/app_name"
            android:indeterminateDrawable="@drawable/bg_on_loading"
            android:visibility="visible"/>
    </RelativeLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_onboarding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_header"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:visibility="gone"
                    />

                <TextView
                    android:id="@+id/txt_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manofik_bold"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="35sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/rcy_splash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <me.relex.circleindicator.CircleIndicator3
                android:id="@+id/indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                app:ci_drawable="@drawable/circle_indicator"
                android:layout_marginBottom="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/layout_account"/>
            <LinearLayout
                android:id="@+id/layout_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingTop="20dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/yellow"
                    android:elevation="10dp"
                    android:fontFamily="@font/gt_walshiem"
                    android:shadowColor="@color/black"
                    android:text="@string/btn_login"
                    android:textColor="@color/black"
                    android:tag="@string/check_phone"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/light_blue"
                    android:elevation="10dp"
                    android:fontFamily="@font/gt_walshiem"
                    android:shadowColor="@color/black"
                    android:text="@string/btn_signup"
                    android:textSize="15sp" />
                <LinearLayout
                    android:id="@+id/layout_txt"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/txt_question_acc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_account"
                        android:textColor="@color/white"
                        android:fontFamily="@font/gt_walshiem"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"/>
                    <TextView
                        android:id="@+id/txt_create_acc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/create_account"
                        android:fontFamily="@font/gt_walshiem"
                        android:textColor="@color/light_blue"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>